hydra/test/test_examples/type_errors/header_assignment.tpc
header bool x;
init {
   x = true;
} 
telemetry {} 
check {}